- Templates to create a project (based on dialog or main window).
- The code completion list contains the name and signature of functions.
- Entries "Close Other Tabs" and "Close All Tabs" in popup menu showed by right-click on editor Tab.
- Add Polish, Spanish, Chinese and Russian translations

September 25 2006 Version 0.19
Corrections:
- The code is entirely translated in English, variables, function names and file names. 
- Improvement of completion, much faster (5 or 6 times). An improved code increases its reliability.
- The location of qmake is determined in this order:
   1. Read in INI file the lasted saved location. If it not saved, use : QLibraryInfo::location( QLibraryInfo::BinariesPath )+"/qmake";
   2. Test if the location finded on 1 is good, otherwise display a dialog for choose qmake location
   In options dialog, it is possible to change the location of qmake anytime.
Adds:
- The classes explorer to navigate into classes and members. By right-click, each item can display the two files of a member or function: implementation and declaration. The double-click shows the implementation if available. The items are updated in real time when the text in editor is modified and the interval between two updates can be configured in options dialog. This new feature require ctags.
- The project QIde is now a single project without plugin projects (dockplugin, lineedithistoplugin and treeprojectplugin), not requires to build the application.
- On close, "Replace" and "Find in files" dialogs saves their options to reuse on next showing.
- Menu "Debug | Parameters" to configure the arguments of program, his working directory and environment variables.
- Menu "Debug | Calls Stack" to show all functions called. Is equivalent to the 'backtrace' gdb command. In the dialog, when a line is activated, the file is opened on good line.

August 28 2006 Version 0.18-a 
Corrections:
- A crash when "Edit | Toggle comment" is choose on unselected line.